# inochi2d-3ds

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  renderer.rs
