[package]
name = "inochi2d-3ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs", version = "0.1.0" }
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs", version = "0.7.1" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs", version = "21.2.0" }
inox2d = { version = "0.1.0", default-features = false }
libc = "0.2.141"
pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds.git", version = "0.1.0" }
shim-3ds = { git = "https://github.com/rust3ds/shim-3ds.git", version = "0.1.0" }
thiserror = "1.0.40"

[build-dependencies]
toml = "0.5"

[package.metadata.cargo-3ds]
romfs_dir = "src/romfs"
